--- a/package.json
+++ b/package.json
@@ -1,89 +1,79 @@
 {
-	"name": "rhnet",
-	"version": "0.1.0",
-	"private": true,
-	"repository": {
-		"type": "git",
-		"url": "https://github.com/picfab/picfab-fabienpicard_12_22032021.github.io"
-	},
-	"author": "Fabien Picard",
-	"dependencies": {
-		"@material-ui/core": "^4.11.3",
-		"@testing-library/jest-dom": "^5.11.4",
-		"@testing-library/react": "^11.1.0",
-		"@testing-library/user-event": "^12.1.10",
-		"postcss-modules": "^4.0.0",
-		"react": "^17.0.2",
-		"react-dom": "^17.0.2",
-		"react-redux": "^7.2.3",
-		"react-resize-detector": "^6.6.4",
-		"react-router-dom": "^5.2.0",
-		"react-scripts": "^4.0.3",
-		"redux": "^4.0.5",
-		"table-hrnet": "^0.0.2",
-		"web-vitals": "^1.0.1"
-	},
-	"scripts": {
-		"start": "react-scripts start",
-		"build": "react-scripts build",
-		"test": "react-scripts test",
-		"eject": "react-scripts eject",
-		"doc": "jsdoc -c jsdoc.json",
-		"doccss": "node-sass --include-path scss ./src/sass/doc.scss ./docs/styles.css"
-	},
-	"browserslist": {
-		"production": [
-			">0.2%",
-			"not dead",
-			"not op_mini all"
-		],
-		"development": [
-			"last 1 chrome version",
-			"last 1 firefox version",
-			"last 1 safari version"
-		]
-	},
-	"devDependencies": {
-		"@babel/core": "^7.12.3",
-		"@babel/preset-env": "^7.13.10",
-		"@testing-library/react-hooks": "^5.1.1",
-		"@typescript-eslint/eslint-plugin": "^4.19.0",
-		"@typescript-eslint/parser": "^4.19.0",
-		"@wojtekmaj/enzyme-adapter-react-17": "^0.6.1",
-		"babel-eslint": "^10.1.0",
-		"babel-loader": "8.1.0",
-		"better-docs": "^1.2.2",
-		"chai": "^4.3.4",
-		"chai-enzyme": "^1.0.0-beta.0",
-		"chai-jest-diff": "^1.0.2",
-		"dirty-chai": "^2.0.1",
-		"enzyme": "^3.11.0",
-		"enzyme-adapter-react-16": "^1.15.6",
-		"eslint": "^7.23.0",
-		"eslint-config-prettier": "^8.1.0",
-		"eslint-config-react-app": "^6.0.0",
-		"eslint-plugin-flowtype": "^5.4.0",
-		"eslint-plugin-import": "^2.22.1",
-		"eslint-plugin-jest": "^24.3.2",
-		"eslint-plugin-jsx-a11y": "^6.4.1",
-		"eslint-plugin-prettier": "^3.3.1",
-		"eslint-plugin-react": "^7.23.1",
-		"eslint-plugin-react-hooks": "^4.2.0",
-		"jsdoc": "^3.6.6",
-		"node-sass": "^5.0.0",
-		"prettier": "^2.2.1",
-		"react-test-renderer": "^17.0.2",
-		"redux-mock-store": "^1.5.4",
-		"sass": "^1.32.8",
-		"sinon": "^10.0.0",
-		"sinon-chai": "^3.6.0",
-		"webpack": "4.44.2"
-	},
-	"jest": {
-		"collectCoverageFrom": [
-			"src/**/*.{js,jsx}",
-			"!**/wrapper/**",
-			"!**/reportWebVitals.js"
-		]
-	}
+  "name": "hrnet",
+  "version": "0.1.0",
+  "private": true,
+  "dependencies": {
+    "@material-ui/core": "^4.11.3",
+    "@testing-library/jest-dom": "^5.11.4",
+    "@testing-library/react": "^11.1.0",
+    "@testing-library/user-event": "^12.1.10",
+    "better-docs": "^1.2.2",
+    "classnames": "^2.3.1",
+    "moment": "^2.29.1",
+    "prop-types": "^15.7.2",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "4.0.3",
+    "table-hrnet": "^0.0.4",
+    "web-vitals": "^1.0.1"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "buildServe": "serve -s build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject",
+    "doc": "jsdoc -c jsdoc.json",
+    "doccss": "node-sass --include-path scss ./src/sass/doc.scss ./docs/styles.css"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  },
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^4.22.0",
+    "@typescript-eslint/parser": "^4.22.0",
+    "@wojtekmaj/enzyme-adapter-react-17": "^0.6.1",
+    "babel-eslint": "^10.1.0",
+    "chai": "^4.3.4",
+    "chai-enzyme": "^1.0.0-beta.1",
+    "chai-jest-diff": "^1.0.2",
+    "dirty-chai": "^2.0.1",
+    "enzyme": "^3.11.0",
+    "eslint": "^7.24.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-config-prettier": "^8.2.0",
+    "eslint-plugin-flowtype": "^5.7.2",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jest": "^24.3.5",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-prettier": "^3.4.0",
+    "eslint-plugin-react": "^7.23.2",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "jsdoc": "^3.6.6",
+    "node-sass": "^5.0.0",
+    "postcss": "^8.2.12",
+    "postcss-modules": "^4.0.0",
+    "prettier": "^2.2.1",
+    "react-test-renderer": "^17.0.2",
+    "redux-mock-store": "^1.5.4",
+    "sass": "^1.32.11",
+    "sinon": "^10.0.0",
+    "sinon-chai": "^3.6.0"
+  }
 }
