--- a/package.json
+++ b/package.json
@@ -75,5 +75,12 @@
     "sass": "^1.32.11",
     "sinon": "^10.0.0",
     "sinon-chai": "^3.6.0"
-  }
+  },
+  "jest": {
+		"collectCoverageFrom": [
+			"src/**/*.{js,jsx}",
+			"!**/wrapper/**",
+			"!**/reportWebVitals.js"
+		]
+	}
 }
